# nanodsp

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build-publish.yml  ci.yml
api/: index.html
api/analysis/: index.html
api/buffer/: index.html
api/effects/: index.html
api/effects/composed/: index.html
api/effects/daisysp/: index.html
api/effects/dynamics/: index.html
api/effects/filters/: index.html
api/effects/reverb/: index.html
api/effects/saturation/: index.html
api/io/: index.html
api/ops/: index.html
api/spectral/: index.html
api/stream/: index.html
api/synthesis/: index.html
api/timestretch/: index.html
cli/: index.html
cmake/: daisysp_compat.h  hisstools_arch_compat.h  msvc_compat.h
demos/: demo_analysis.py  demo_composed.py  demo_daisysp_filters.py  demo_delay.py  demo_distortion.py  demo_dynamics.py  demo_filters.py  demo_fxdsp.py  demo_grainflow.py  demo_iir_filters.py  demo_modulation.py  demo_ops.py  demo_paulstretch.py  demo_pitch.py  demo_resample.py  demo_reverb.py  demo_signalsmith_stretch.py  demo_spectral.py  demo_spectral_extra.py  demo_synthesis.py
docs/: cli.md  getting-started.md  guide.md  index.md
docs/api/: analysis.md  buffer.md  index.md  io.md  ops.md  spectral.md  stream.md  synthesis.md  timestretch.md
docs/api/effects/: composed.md  daisysp.md  dynamics.md  filters.md  index.md  reverb.md  saturation.md
docs/guide/: analysis.md  composed.md  dynamics.md  filters.md  granular.md  index.md  modulation.md  reverb.md  saturation.md  spectral.md  streaming.md  synthesis.md  timestretch.md
getting-started/: index.html
guide/: index.html
guide/analysis/: index.html
guide/composed/: index.html
guide/dynamics/: index.html
guide/filters/: index.html
guide/granular/: index.html
guide/modulation/: index.html
guide/reverb/: index.html
guide/saturation/: index.html
guide/spectral/: index.html
guide/streaming/: index.html
guide/synthesis/: index.html
guide/timestretch/: index.html
search/: search_index.json
src/nanodsp/: __init__.py  __main__.py  _cli.py  _core.cpp  _core.pyi  _core_bloscillators.cpp  _core_choc.cpp  _core_common.h  _core_daisysp.cpp  _core_fxdsp.cpp  _core_grainflow.cpp  _core_hisstools.cpp  _core_iirdesign.cpp  _core_madronalib.cpp  _core_paulstretch.cpp  _core_signalsmith.cpp  _core_signalsmith_stretch.cpp  _core_stk.cpp  _core_vafilters.cpp  _helpers.py  analysis.py  buffer.py  effects.py  io.py  ops.py  spectral.py  stream.py  synthesis.py  timestretch.py
src/nanodsp/effects/: __init__.py  composed.py  daisysp.py  dynamics.py  filters.py  reverb.py  saturation.py
tests/: test_analysis.py  test_bloscillators.py  test_buffer.py  test_cli.py  test_cli_user_presets.py  test_cydsp.py  test_daisysp.py  test_delay.py  test_effects.py  test_envelopes.py  test_fft.py  test_filters.py  test_fxdsp.py  test_grainflow.py  test_hisstools.py  test_iirdesign.py  test_io.py  test_madronalib.py  test_mix.py  test_numerical.py  test_ops.py  test_paulstretch.py  test_rates.py  test_signalsmith_stretch.py  test_spectral.py  test_spectral_dsp.py  test_stateful.py  test_stk.py  test_stream.py  test_synthesis.py  test_vafilters.py
