[project]
name = "nanodsp"
version = "0.1.5"
description = "High-performance Python DSP toolkit built on C++ libraries via nanobind"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["numpy"]
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" },
    { name = "nanodsp contributors" }
]
keywords = ["audio", "dsp", "signal-processing", "filters", "fft", "synthesis", "effects"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/shakfu/nanodsp"
Repository = "https://github.com/shakfu/nanodsp"
Documentation = "https://github.com/shakfu/nanodsp#readme"
Issues = "https://github.com/shakfu/nanodsp/issues"
Changelog = "https://github.com/shakfu/nanodsp/releases"

[project.scripts]
nanodsp = "nanodsp.__main__:main"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-review>=0.1.2",
    "ruff>=0.14.9",
    "twine>=6.2.0",
]

[build-system]
requires = ["scikit-build-core>=0.8", "nanobind"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/nanodsp"]
wheel.exclude = [
    "*.cpp",
]
cmake.args = []
cmake.define = {}
cmake.build-type = "Release"
cmake.source-dir = "."
sdist.include = [
    "CMakeLists.txt",
    "cmake/",
    "src/",
    "thirdparty/",
]
sdist.exclude = [
    ".github/",
    ".venv/",
    "tests/",
    "thirdparty/stk/bin/",
    "thirdparty/stk/doc/",
    "thirdparty/stk/projects/",
    "thirdparty/stk/rawwaves/",
    "thirdparty/DaisySP/examples/",
    "thirdparty/DaisySP/tests/",
    "thirdparty/madronalib/Tests/",
    "thirdparty/madronalib/examples/",
    "thirdparty/madronalib/doc/",
    "thirdparty/HISSTools_Library/Documentation/",
    "thirdparty/choc/tests/",
    "thirdparty/choc/javascript/",
]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_* pp*"
test-requires = "pytest"
test-command = "pytest {project}/tests -v"
test-skip = "*-macosx_x86_64"

[tool.cibuildwheel.linux]
archs = "x86_64"

[tool.cibuildwheel.macos]
archs = "arm64 x86_64"
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }

[tool.cibuildwheel.windows]
archs = "AMD64"
